@@ -128,6 +128,10 @@ CHANGES IN CUPS v1.1.3
 	- The web printer modify interface now remembers
 	  the previous device and driver settings (except
 	  for serial ports.)
+	- The job-k-octets attribute is now stored as part of
+	  the job attributes; this preserves the information
+	  after a job is completed when job file history is
+	  turned off.
 
 
 CHANGES IN CUPS v1.1.2
